Added transform tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -227,6 +227,9 @@ if (CATKIN_ENABLE_TESTING)
 
   catkin_add_gtest(stf_orientation_test test/orientation_test.cpp)
   target_link_libraries(stf_orientation_test stf_orientation ${catkin_LIBRARIES})
+
+  catkin_add_gtest(stf_transform_test test/transform_test.cpp)
+  target_link_libraries(stf_transform_test stf_transform ${catkin_LIBRARIES})
 endif()
 
 ## Add folders to be run by python nosetests
