--- a/.travis.yml
+++ b/.travis.yml
@@ -39,3 +39,8 @@ script:
 after_success:
 - cd ~/catkin_ws/src/stf
 - rosdoc_lite .
+- cd ~/catkin_ws/build
+- lcov --directory . --capture --output-file coverage.info
+- lcov --remove coverage.info '/opt/*' '/usr/*' '*/devel/*' '*test_*' '*_test*' --output-file coverage.info
+- lcov --list coverage.info
+- coveralls-lcov coverage.info
