--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>stf</name>
-  <version>0.0.0</version>
+  <version>0.1.0</version>
   <description>Static transform library</description>
 
   <maintainer email="jstn@cs.washington.edu">Justin Huang</maintainer>
   <license>MIT</license>
 
-  <!-- <url type="website">http://wiki.ros.org/stf</url> -->
-
-  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
+  <url type="website">http://wiki.ros.org/stf</url>
 
   <buildtool_depend>catkin</buildtool_depend>
   <depend>cmake_modules</depend>
