--- a/.travis.yml
+++ b/.travis.yml
@@ -28,16 +28,16 @@ install:
 - sudo rosdep init
 - rosdep update
 - mkdir -p ~/catkin_ws/src
-- cd ..; mv stf ~/catkin_ws/src
+- cd ..; mv transform_graph ~/catkin_ws/src
 - cd ~/catkin_ws
 - catkin init
 - rosdep install --from-paths src --ignore-src --rosdistro=${ROS_DISTRO} -y
 script:
 - catkin build
-- catkin run_tests stf --no-deps
-- catkin_test_results build/stf
+- catkin run_tests transform_graph --no-deps
+- catkin_test_results build/transform_graph
 after_success:
-- cd ~/catkin_ws/src/stf
+- cd ~/catkin_ws/src/transform_graph
 - rosdoc_lite .
 - cd ~/catkin_ws/build
 - lcov --directory . --capture --output-file coverage.info
