--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
   > /etc/apt/sources.list.d/ros-latest.list'
 - wget http://packages.ros.org/ros.key -O - | sudo apt-key add -
 - sudo apt-get update -qq
-- sudo apt-get install -qq -y python-catkin-pkg python-catkin-tools python-rosdep
+- sudo apt-get install -qq -y python-catkin-pkg python-catkin-tools python-rosdep python-catkin-pkg
   python-wstool ros-$ROS_DISTRO-catkin ros-$ROS_DISTRO-ros lcov ros-$ROS_DISTRO-rosdoc-lite
 - gem install coveralls-lcov
 - source /opt/ros/$ROS_DISTRO/setup.bash
