--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ install:
 - sudo apt-get install -qq -y python-catkin-pkg python-catkin-tools python-rosdep python-catkin-pkg
   python-wstool ros-$ROS_DISTRO-catkin ros-$ROS_DISTRO-ros lcov ros-$ROS_DISTRO-rosdoc-lite
 - gem install coveralls-lcov
+- export PYTHONPATH=/usr/local/lib/python2.7/dist-packages/
 - source /opt/ros/$ROS_DISTRO/setup.bash
 - sudo rosdep init
 - rosdep update
